<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nicosantomartino.a15apiclima.Activity_Detalle">

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/location"
        android:textColor="@color/colorDetalle"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorDetalle"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:text="@string/trespuntos" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/temperature"
        android:textColor="@color/colorDetalle"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorDetalle"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="@string/trespuntos" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/minimum"
        android:textColor="@color/colorDetalle"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtMinima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorDetalle"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:text="@string/trespuntos" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/maximum"
        android:textColor="@color/colorDetalle"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtMaxima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorDetalle"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:text="@string/trespuntos" />

    <TextView
        android:id="@+id/TextView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/humidity"
        android:textColor="@color/colorDetalle"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtHumedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorDetalle"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:text="@string/trespuntos" />

    <TextView
        android:id="@+id/TextView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/pressure"
        android:textColor="@color/colorDetalle"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtPresion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorDetalle"
        tools:text="@string/trespuntos" />

</LinearLayout>
